# Data-flow-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
configs/profiles/: default.yaml  production.yaml
configs/tasks/: deduplication.yaml  entity_resolution.yaml  format_standardization.yaml  missing_value_imputation.yaml  type_coercion.yaml
dataflow/agents/: __init__.py  engineer.py  llm_factory.py  profiler.py  qa.py
dataflow/agents/prompts/: engineer_v1.txt  profiler_v1.txt  qa_v1.txt
dataflow/api/: dependencies.py  main.py
dataflow/api/routers/: evaluation.py  jobs.py  llm.py  memory.py  tasks.py
dataflow/evaluation/: __init__.py  metrics.py  reporter.py  runner.py
dataflow/graph/: __init__.py  builder.py  edges.py  nodes.py
dataflow/memory/: store.py
dataflow/observability/: __init__.py  logger.py  tracer.py
dataflow/sandbox/: __init__.py  docker_runner.py  local_runner.py
dataflow/schemas/: __init__.py  execution.py  report.py  state.py  task_config.py
dataflow/tasks/: __init__.py  base.py  loader.py  registry.py
dataflow_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docker/: Dockerfile  Dockerfile.sandbox  docker-compose.yml  prometheus.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: JobCard.tsx  Layout.tsx  ui.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: EvalPage.tsx  JobsPage.tsx  MemoryPage.tsx  SettingsPage.tsx
scripts/: evaluate.py  run_job.py
tests/integration/: test_graph_flow.py
tests/unit/: test_circuit_breaker.py  test_metrics.py  test_registry.py
